# bifunctor.hs

./: bifunctor.cabal
src/Control/Categorical/: Bifunctor.hs
