cabal-version:       2.0
name:                bifunctor
version:             0.1.0.0
synopsis:            Bifunctors
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          m.farkasdyck@gmail.com
-- copyright:           
category:            Math
build-type:          Simple

library
  exposed-modules:
    Control.Categorical.Bifunctor
  other-modules:
    Prelude
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
                     , category ^>= 0.2.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    UnicodeSyntax
    LambdaCase
    EmptyCase
    PartialTypeSignatures
    ScopedTypeVariables
    PolyKinds
    ConstraintKinds
    MultiParamTypeClasses
    FlexibleContexts
    FlexibleInstances
    StandaloneDeriving
    Safe
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=incomplete-record-updates
    -Werror=missing-fields
    -Werror=missing-methods
    -Wno-partial-type-signatures
    -Wno-simplifiable-class-constraints
